# tire-detector-hog

./: .gitignore  CMakeLists.txt  README.md
analyze/: calculate_time.py  calculate_time_only_openmp.py  results.py
preprocess/: extract_images.py  extract_non_tires.py
src/: listDir.cpp  listDir.hpp  main.cpp  main.cu  mpi.cpp  openmp.cpp  secuencial.cpp  threaded.cpp
